# vmtop

./: Makefile.am  README.en.md  README.md  README.zh.md  add-README.zh.md.-update-README.md.patch  arch-add-x86-kvm-exits-items.patch  args-add-p-option.patch  bugfix-add-check-to-avoid-invalid-ptr-for-strcmp.patch  bugfix-check-unsigned-number-flip-before-getting-del.patch  bugfix-exit-vmtop-when-arguments-are-invalid.patch  bugfix-fix-ST-GUE-HYP-formula.patch  codestyle-del-unused-var.patch  configure.ac  display-add-limit-to-usage-display.patch  display-del-screen-clear-after-key-response.patch  display-expand-CPU-display.patch  display-expand-row-size-in-TEXT-mode.patch  display-modify-filter-display-to-support-more-displa.patch  input-add-invalid-opt-check-in-input.patch  input-change-wait-mechanism-for-input.patch  key-add-page-up-down-key-response.patch  keyboard-change-wait-time-to-3s.patch  performance-change-memset-location.patch  performance-del-unnecessary-memcpy-and-memset.patch  proc-del-loop-sscanf-for-proc-pid-stat-file.patch  proc-del-prc-pid-comm-read.patch  proc-del-unused-items-getting-from-proc-stat-refresh.patch  split-cflags-and-ldflags.patch  utils-del-realpath-from-read_file.patch  vcp_stat-add-Max-Scheduling-Delay-time-items-to-disp.patch  vcpu_list-pre-malloc-vcpu-list-to-improve-performanc.patch  vcpu_stat-add-remaining-kvm-exits-items-to-display.patch  vcpu_stat-get-vcpu-stat-list-once-per-display-instea.patch  vcpustat-modify-vcpu-info-acquirement-from-debugfs.patch  version-unified-with-release-version.patch  vmtop-add-h-and-v.patch  vmtop-simplify-print_domain_field.patch  vmtop.spec  vmtop.yaml
doc/: FAQ  HOWTO  TODO
src/: Makefile.am  domain.c  domain.h  field.c  field.h  proc.c  proc.h  resctrl.c  resctrl.h  type.h  utils.c  utils.h  vcpu_stat.c  vcpu_stat.h  vmtop.c  vmtop.h
